# MCLH

./: package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_state.rs  error.rs  lib.rs  main.rs
src-tauri/src/api/: events.rs  mod.rs  rest.rs  websocket.rs
src-tauri/src/commands/: command_executor.rs  mod.rs  process_manager.rs
src-tauri/src/config/: config_templates.rs  eula_manager.rs  mod.rs  modpack_installer.rs  server_properties.rs
src-tauri/src/models/: config.rs  log_entry.rs  metrics.rs  mod.rs  server_status.rs
src-tauri/src/monitoring/: alert_manager.rs  metrics_collector.rs  mod.rs  resource_monitor.rs
src-tauri/src/utils/: fs_utils.rs  java_detector.rs  mod.rs  process_utils.rs
