[package]
name = "minecraft-server"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "minecraft_server_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "process", "fs", "io-util", "time", "sync"] }
futures-util = "0.3.30" # Version was okay, minor update

sysinfo = "0.30.11" # Updated

reqwest = { version = "0.12.2", features = ["json", "stream"] } # Added features, updated version

zip = "0.6.6" # Updated version
walkdir = "2.5.0" # Version was okay

thiserror = "1.0.58" # Updated

chrono = { version = "0.4.38", features = ["serde"] } # Updated, added serde feature if needed for config/events
regex = "1.10.4" # Updated
which = "6.0.1" # Updated
once_cell = "1.19.0" # Version was okay
wait-timeout = "0.2.0" # Version was okay

log = "0.4.21" # Updated
env_logger = "0.11.3"
lazy_static = "1.5.0"
rand = "0.8.5" # Updated
